# cpp-playground

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.mmd  CMakeLists.txt  CMakePresets.json  DEEP_DIVE.md  README.md  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
core/: lab.hpp  lab_registry.cpp  main.cpp
labs/: initialization.cpp  template_lab.cpp
notes/: README.md
